# memernaex

./: .pre-commit-config.yaml  Justfile  pyproject.toml
memernaex/: run.py
memernaex/analysis/: complexity.py  data.py
memernaex/design/harness/: device_model.py  optimizer.py  reporter.py  trainer.py
memernaex/design/models/ff/: mlm.py  simple.py
memernaex/design/models/parts/transformer/: transformer_model.py
memernaex/design/models/transformer/: mlm.py
memernaex/design/rna/: dataset.py  pipeline.py
memernaex/experiments/fold/: accuracy_plotter.py  perf_plotter.py
memernaex/experiments/subopt/: perf_analyzer.py  perf_common.py  perf_plotter.py
memernaex/plot/: plots.py  util.py
memernaex/programs/: analyze_subopt_perf.py  compare_partition.py  crop_image.py  design.py  plot_ensemble.py  plot_fold_accuracy.py  plot_fold_perf.py  plot_subopt_perf.py
