[project]
authors = [{name = "Eliot Courtney", email = "edgeworth.dev@gmail.com"}]
description = "memerna extra programs"
dynamic = ["dependencies"]
license = {text = "GPL-3.0-only"}
name = "memernaex"
requires-python = ">=3.13,<4.0"
version = "0.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
packages = [{include = "memernaex"}]

[tool.poetry.dependencies]
bidict = ">=0.23.1" 
click = ">=8.2.1" 
click-params = ">=0.5.0" 
click_log = ">=0.4.0" 
cloup = ">=3.0.7" 
matplotlib = ">=3.10.3" 
polars = ">=1.31.0" 
rnapy = {git = "https://github.com/Edgeworth/memerna.git", rev = "main"} 
scipy = "1.15.3" # https://github.com/statsmodels/statsmodels/issues/9584
seaborn = ">=0.13.2" 
statsmodels = ">=0.14.4" 
viennarna = ">=2.7.0" 

[tool.poetry.group.dev.dependencies]
mypy = ">=1.16.0"
poetry-plugin-up = ">=0.9.0"

[tool.mypy]
show_column_numbers = true
# Require type hints
disallow_untyped_defs = true

# Allow types that is not imported to be used in annotations.
# This is necessary because some libraries don't have annotations.
disallow_any_unimported = false

# Disallow implicit optional e.g. arg: str = None
no_implicit_optional = true

# Check bodies of functions without type annotations too
check_untyped_defs = true

# Warn about returning Any from a function annotated to not return it
warn_return_any = true

# Warn about unused ignore annotations
warn_unused_ignores = true

# Show error codes
show_error_codes = true

# Set python version.
python_version = '3.13'

# No type hints for torchvision.
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "torchvision.*",
  "torchtext.*",
  "click_log.*",
  "numpy.*",
  "ViennaRNA.*",
  "pandas.*",
  "matplotlib.*",
  "seaborn.*",
  "statsmodels.*",
  "click_params.*",
  "scipy.*",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
# Make sure lists etc can go back onto one line if they get shorter.
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "A003", # allow attribute shadowing builtins 'eval', 'sorted' etc
  "ANN401", # allow Any type annotation
  "BLE001", # allow except Exception
  "C901", # ignore too complex code
  "COM812", # allow missing trailing comma
  "D", # ignore docstring stuff
  "DTZ005", # allow naive datetime objects
  "EM101", # allow exceptions with string arguments
  "EM102", # allow f-string in exception
  "ERA001", # allow commented out code
  "FBT001", # allow boolean position arg in functions
  "FBT002", # allow boolean position arg in functions
  "FBT003", # allow boolean position arg in functions
  "FIX", # no notes on FIXME, TODO, etc
  "G004", # allow f-string in logs, just be careful if performance matters
  "ISC001", # avoid conflict with formatter
  "N803", # allow uppercase variables
  "N806", # allow uppercase variables
  "N812", # allow e.g. import torch.nn.functional as F
  "PD002", # allow pandas in place operations
  "PD901", # allow 'df'
  "PLR0912", # allow more branches in functions
  "PLR0913", # allow more arguments in functions
  "PLR0915", # allow more statements in functions
  "PLR2004", # allow magic numbers
  "PYI021", # allow docstrings in stubs
  "RET504", # allow return statements after assignment of variable
  "S101", # allow asserts
  "S311", # remove cryptographic random gen false positives
  "S324", # allow md5
  "S603", # false positives on subprocess sanitising
  "S605", # allow starting process via shell
  "S608", # allow interpolated SQL (be careful)
  "T201", # allow print statements
  "TCH", # don't use type-checking import blocks
  "TD", # no TODO related warnings
  "TRY003", # allow exceptions with string arguments
  "PLR0911", # allow more returns in functions
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
  "SLF001", # allow private member access
]

[tool.ruff.lint.isort]
# To be consistent with skip-magic-trailing-comma = true
split-on-trailing-comma = false
